{
    "name": "ColorCellControls",
    "maps": [
        {
            "name": "TouchCell",
            "id": "7975ea99-444e-430a-ac1c-fb63e0c55165",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "4661e183-2e4a-4387-b956-2af5d4268bdf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "032fb98c-1bfc-4d0e-a472-4abdba9d504d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4194217b-7329-4384-8db5-7a11ca4e7372",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39c7a168-8b17-40de-be4a-539d9321e41a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}